@@ -1,3 +1,7 @@
+2006-04-29 Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-paint-server.c: Fix a "type-punned pointer" issue found by Thomas VS
+	
 2006-04-27 Dom Lachowicz <cinamod@hotmail.com>
 
 	* rsvg-base.c: Handle system, public, and unparsed entity declarations
